# tpch_table_provider

./: Cargo.toml  README.md
tpch_comparisons/: Cargo.toml
tpch_comparisons/examples/: execution_time_vs_scale_factor.rs  streaming_queries.rs  streaming_to_in_memory.rs
tpch_comparisons/src/: lib.rs
tpch_partitioned_provider/: Cargo.toml
tpch_partitioned_provider/src/: lib.rs
tpch_queries/: Cargo.toml
tpch_queries/src/: lib.rs
tpch_streaming_provider/: Cargo.toml
tpch_streaming_provider/src/: lib.rs
