[workspace]
members = [ "tpch_comparisons",
    "tpch_queries",
    "tpch_streaming_provider",
]
resolver = "3"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.82.0"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.88"
datafusion = "46.0.1"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["macros", "rt", "sync"] }
tpchgen = "1.1.1"
tpchgen-arrow = "1.1.1"
tpch_queries = { path = "tpch_queries" }
tpch_streaming_provider = { path = "tpch_streaming_provider" }

